current push from rajesh

--- a/index.html
+++ b/index.html
@@ -129,135 +129,143 @@
         </div>
       </div>
       <div class="main-parent-whats-in-the-course-wrapper-container">
-      <div class="main-parent-whats-in-the-course">
-        <div class="whats-in-the-header-text">
-          <h1 class="whats-in-containt">
-            WHAT'S IN THE <span class="whats-in-course-text">COURSE</span>
-          </h1>
-        </div>
-        <div class="main-text-card-container">
-          <div class="card-text">
-            <h1 class="card-header-containt">3 Concepts of Time</h1>
-            <p class="card-qn-containt">
-              The biggest change starts with your mindset and
-              perspective!Redefine your relationship with time using 3 powerful
-              concepts. Learn the process to allocate your time efficiently.
-            </p>
+        <div class="main-parent-whats-in-the-course">
+          <div class="whats-in-the-header-text">
+            <h1 class="whats-in-containt">
+              WHAT'S IN THE <span class="whats-in-course-text">COURSE</span>
+            </h1>
           </div>
-          <div class="card-text">
-            <h1 class="card-header-containt">Building a Routine</h1>
-            <p class="card-qn-containt">
-              Building a schedule and a routine does NOT have to be rigid!Create
-              the ultimate routine accommodating your goals, hobbies, relaxation
-              time, commute, social activities, and even unplanned events. Life
-              is unpredictable, but your routine doesnt have to be.
-            </p>
+          <div class="main-text-card-container">
+            <div class="card-text">
+              <h1 class="card-header-containt">3 Concepts of Time</h1>
+              <p class="card-qn-containt">
+                The biggest change starts with your mindset and
+                perspective!Redefine your relationship with time using 3
+                powerful concepts. Learn the process to allocate your time
+                efficiently.
+              </p>
+            </div>
+            <div class="card-text">
+              <h1 class="card-header-containt">Building a Routine</h1>
+              <p class="card-qn-containt">
+                Building a schedule and a routine does NOT have to be
+                rigid!Create the ultimate routine accommodating your goals,
+                hobbies, relaxation time, commute, social activities, and even
+                unplanned events. Life is unpredictable, but your routine doesnt
+                have to be.
+              </p>
+            </div>
+            <div class="card-text">
+              <h1 class="card-header-containt">3 Concepts of Time</h1>
+              <p class="card-qn-containt">
+                The biggest change starts with your mindset and
+                perspective!Redefine your relationship with time using 3
+                powerful concepts. Learn the process to allocate your time
+                efficiently.
+              </p>
+            </div>
           </div>
-          <div class="card-text">
-            <h1 class="card-header-containt">3 Concepts of Time</h1>
-            <p class="card-qn-containt">
-              The biggest change starts with your mindset and
-              perspective!Redefine your relationship with time using 3 powerful
-              concepts. Learn the process to allocate your time efficiently.
-            </p>
+          <div class="main-text-card-container2">
+            <div class="card-text">
+              <h1 class="card-header-containt">3 Concepts of Time</h1>
+              <p class="card-qn-containt">
+                The biggest change starts with your mindset and
+                perspective!Redefine your relationship with time using 3
+                powerful concepts. Learn the process to allocate your time
+                efficiently.
+              </p>
+            </div>
+            <div class="card-text">
+              <h1 class="card-header-containt">Building a Routine</h1>
+              <p class="card-qn-containt">
+                Building a schedule and a routine does NOT have to be
+                rigid!Create the ultimate routine accommodating your goals,
+                hobbies, relaxation time, commute, social activities, and even
+                unplanned events. Life is unpredictable, but your routine doesnt
+                have to be.
+              </p>
+            </div>
+            <div class="card-text">
+              <h1 class="card-header-containt">3 Concepts of Time</h1>
+              <p class="card-qn-containt">
+                The biggest change starts with your mindset and
+                perspective!Redefine your relationship with time using 3
+                powerful concepts. Learn the process to allocate your time
+                efficiently.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="main-text-card-container2">
-          <div class="card-text">
-            <h1 class="card-header-containt">3 Concepts of Time</h1>
-            <p class="card-qn-containt">
-              The biggest change starts with your mindset and
-              perspective!Redefine your relationship with time using 3 powerful
-              concepts. Learn the process to allocate your time efficiently.
-            </p>
+          <div class="card-button">
+            <button class="card-button-containt">
+              <p class="card-button-text">ENROLL NOW</p>
+            </button>
           </div>
-          <div class="card-text">
-            <h1 class="card-header-containt">Building a Routine</h1>
-            <p class="card-qn-containt">
-              Building a schedule and a routine does NOT have to be rigid!Create
-              the ultimate routine accommodating your goals, hobbies, relaxation
-              time, commute, social activities, and even unplanned events. Life
-              is unpredictable, but your routine doesnt have to be.
-            </p>
-          </div>
-          <div class="card-text">
-            <h1 class="card-header-containt">3 Concepts of Time</h1>
-            <p class="card-qn-containt">
-              The biggest change starts with your mindset and
-              perspective!Redefine your relationship with time using 3 powerful
-              concepts. Learn the process to allocate your time efficiently.
-            </p>
-          </div>
-        </div>
-        <div class="card-button">
-          <button class="card-button-containt">
-            <p class="card-button-text">ENROLL NOW</p>
-          </button>
         </div>
       </div>
-    </div>
-      <div class="main-parent-img-container">
-        <div class="how-can-container">
-          <h1 class="how-can-header">
-            WHO CAN TAKE THIS <span class="how-can-course">COURSE</span>
-          </h1>
-        </div>
-        <div class="main-parant-card-img-container">
-          <div class="card-with-img-container">
-            <div class="single-card-box">
-              <img src="./web-img.png/single-card1.png" alt="" />
+      <div class="img-parent-container-section">
+        <div class="main-parent-img-container">
+          <div class="how-can-container">
+            <h1 class="how-can-header">
+              WHO CAN TAKE THIS <span class="how-can-course">COURSE</span>
+            </h1>
+          </div>
+          <div class="main-parant-card-img-container">
+            <div class="card-with-img-container">
+              <div class="single-card-box">
+                <img src="./web-img.png/single-card1.png" alt="" />
+              </div>
+              <div class="single-card-text">
+                <p class="single-card-paragraph">Working Professionals</p>
+              </div>
             </div>
-            <div class="single-card-text">
-              <p class="single-card-paragraph">Working Professionals</p>
+            <div class="card-with-img-container">
+              <div class="single-card-box">
+                <img src="./web-img.png/single-card2.png" alt="" />
+              </div>
+              <div class="single-card-text">
+                <p class="single-card-paragraph">Freelancers</p>
+              </div>
+            </div>
+            <div class="card-with-img-container">
+              <div class="single-card-box">
+                <img src="./web-img.png/single-card3.png" alt="" />
+              </div>
+              <div class="single-card-text">
+                <p class="single-card-paragraph">Entrepreneurs</p>
+              </div>
             </div>
           </div>
-          <div class="card-with-img-container">
-            <div class="single-card-box">
-              <img src="./web-img.png/single-card2.png" alt="" />
+          <div class="main-parant-card-img-container">
+            <div class="card-with-img-container">
+              <div class="single-card-box">
+                <img src="./web-img.png/single-card4.png" alt="" />
+              </div>
+              <div class="single-card-text">
+                <p class="single-card-paragraph">Students</p>
+              </div>
             </div>
-            <div class="single-card-text">
-              <p class="single-card-paragraph">Freelancers</p>
+            <div class="card-with-img-container">
+              <div class="single-card-box">
+                <img src="./web-img.png/single-card5.png" alt="" />
+              </div>
+              <div class="single-card-text">
+                <p class="single-card-paragraph">Homemakers</p>
+              </div>
             </div>
-          </div>
-          <div class="card-with-img-container">
-            <div class="single-card-box">
-              <img src="./web-img.png/single-card3.png" alt="" />
-            </div>
-            <div class="single-card-text">
-              <p class="single-card-paragraph">Entrepreneurs</p>
-            </div>
-          </div>
-        </div>
-        <div class="main-parant-card-img-container">
-          <div class="card-with-img-container">
-            <div class="single-card-box">
-              <img src="./web-img.png/single-card4.png" alt="" />
-            </div>
-            <div class="single-card-text">
-              <p class="single-card-paragraph">Students</p>
-            </div>
-          </div>
-          <div class="card-with-img-container">
-            <div class="single-card-box">
-              <img src="./web-img.png/single-card5.png" alt="" />
-            </div>
-            <div class="single-card-text">
-              <p class="single-card-paragraph">Homemakers</p>
+            <div class="card-with-img-container">
+              <div class="single-card-box">
+                <img src="./web-img.png/single-card6.png" alt="" />
+              </div>
+              <div class="single-card-text">
+                <p class="single-card-paragraph">Career Shifters</p>
+              </div>
             </div>
           </div>
-          <div class="card-with-img-container">
-            <div class="single-card-box">
-              <img src="./web-img.png/single-card6.png" alt="" />
-            </div>
-            <div class="single-card-text">
-              <p class="single-card-paragraph">Career Shifters</p>
-            </div>
+          <div class="card-button">
+            <button class="card-button-containt2">
+              <p class="card-button-text2">ENROLL NOW</p>
+            </button>
           </div>
-        </div>
-        <div class="card-button">
-          <button class="card-button-containt2">
-            <p class="card-button-text2">ENROLL NOW</p>
-          </button>
         </div>
       </div>
       <div class="parant-portfolio-section">
