card container added

--- a/index.html
+++ b/index.html
@@ -268,38 +268,40 @@
           </div>
         </div>
       </div>
-      <div class="parant-portfolio-section">
-        <div class="portfolio-container">
-          <div class="portfolio-left-container">
-            <h1 class="meet-your-containt">MEET YOUR INSTRUCTOR</h1>
-            <h2 class="ankur-containt">Ankur Warikoo</h2>
-            <p class="ankur-paragraph">
-              Ankur wears many hats — teacher, entrepreneur, content creator
-              with a cumulative following of 10Mn+, author of 2 best-selling
-              books, speaker, investor, and mentor.Obsessed with systems,
-              planning, and smart work, he attributes his varied work to the way
-              he runs his day.
-            </p>
-            <p class="every-week-containt">
-              - Every week, he's able to:- Meditate- Read books- Practice
-              singing- Work out- Write- Create videos for YouTube and Instagram-
-              Connect with founders- Spend time with 18-30 year olds, sharing
-              his experience- Speak at leading events and organisations- Conduct
-              online courses
-            </p>
-            <p class="His-guiding-containt">
-              His guiding motto in life since his school days has been “If I do
-              not know how to manage my time, I will never be able to manage
-              anything else!"
-            </p>
-            <div class="portfolio-button-container">
-              <button class="portfolio-button">
-                <p class="portfolio-button-text">ENROLL NOW</p>
-              </button>
+      <div class="main-parant-portfolio-section">
+        <div class="parant-portfolio-section">
+          <div class="portfolio-container">
+            <div class="portfolio-left-container">
+              <h1 class="meet-your-containt">MEET YOUR INSTRUCTOR</h1>
+              <h2 class="ankur-containt">Ankur Warikoo</h2>
+              <p class="ankur-paragraph">
+                Ankur wears many hats — teacher, entrepreneur, content creator
+                with a cumulative following of 10Mn+, author of 2 best-selling
+                books, speaker, investor, and mentor.Obsessed with systems,
+                planning, and smart work, he attributes his varied work to the
+                way he runs his day.
+              </p>
+              <p class="every-week-containt">
+                - Every week, he's able to:- Meditate- Read books- Practice
+                singing- Work out- Write- Create videos for YouTube and
+                Instagram- Connect with founders- Spend time with 18-30 year
+                olds, sharing his experience- Speak at leading events and
+                organisations- Conduct online courses
+              </p>
+              <p class="His-guiding-containt">
+                His guiding motto in life since his school days has been “If I
+                do not know how to manage my time, I will never be able to
+                manage anything else!"
+              </p>
+              <div class="portfolio-button-container">
+                <button class="portfolio-button">
+                  <p class="portfolio-button-text">ENROLL NOW</p>
+                </button>
+              </div>
             </div>
-          </div>
-          <div class="portfolio-right-container">
-            <img src="./web-img.png/image 2.png" alt="" />
+            <div class="portfolio-right-container">
+              <img src="./web-img.png/image 2.png" alt="" />
+            </div>
           </div>
         </div>
       </div>
@@ -384,6 +386,140 @@
                 <p class="dr-abhisek">Dr. Abhishek Gupta</p>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main-plan-container-section">
+      <div class="plan-container-section">
+        <div class="plan-header-container">
+          <h1 class="plan-header-containt">
+            PICK YOUR<span class="plan-contait">PLAN</span>
+          </h1>
+        </div>
+        <div class="plan-card-main-container">
+          <div class="plan-card-container">
+            <div class="plan-header-text-container">
+              <h1 class="besic-text-containt">
+                BASIC <span class="PLAN-text-containt">PLAN</span>
+              </h1>
+            </div>
+            <div class="plan-accses-text-container">
+              <p class="plan-accses-containt">Access to course notes only.</p>
+            </div>
+            <div class="plan-amount-text-container">
+              <p class="plan-amount-number-containt">₹299/-</p>
+            </div>
+            <div class="plan-pdf-text-container">
+              <p class="plan-pdf-containt">
+                PDF Notes Certificate of Completion
+              </p>
+            </div>
+            <div class="plane-button-container">
+              <button class="plan-button">
+                <p class="plan-button-text">ENROLL NOW</p>
+              </button>
+            </div>
+          </div>
+          <div class="plan-card-container2">
+            <div class="plan-header-text-container">
+              <h1 class="stander-text-containt">
+                STANDARD <span class="PLAN-text-containt">PLAN</span>
+              </h1>
+            </div>
+            <div class="plan-accses-text-container">
+              <p class="accses-video-containt">
+                Access to video content, assignment & notes.
+              </p>
+            </div>
+            <div class="plan-amount-text-container">
+              <p class="plan-amount-number-containt">₹399/-</p>
+            </div>
+            <div class="plan-pdf-text-container2">
+              <p class="plan-pdf-containt">
+                Pre-recorded Video Lectures10-days Exercise TemplatesPDF
+                NotesCertificate of Completion
+              </p>
+            </div>
+            <div class="plane-button-container2">
+              <button class="plan-button2">
+                <p class="plan-button-text2">ENROLL NOW</p>
+              </button>
+            </div>
+          </div>
+          <div class="plan-card-container3">
+            <div class="plan-header-text-container">
+              <h1 class="premium-text-containt">
+                PREMIUM <span class="PLAN-text-containt">PLAN</span>
+              </h1>
+            </div>
+            <div class="plan-accses-text-container">
+              <p class="accses-to-complete-containt">
+                Access to video content, assignment & notes.
+              </p>
+            </div>
+            <div class="plan-amount-text-container">
+              <p class="plan-amount-number-containt">₹699/-</p>
+            </div>
+            <div class="plan-pdf-text-container2">
+              <p class="plan-pdf-containt">
+                6 Live Q&A Sessions with Ankur Warikoo Exclusive Community
+                Channel Lifetime Access to Course Upgrades Pre-recorded Video
+                Lectures10-days Exercise Templates PDF Notes Certificate of
+                Completion
+              </p>
+            </div>
+            <div class="plane-button-container3">
+              <button class="plan-button3">
+                <p class="plan-button-text3">ENROLL NOW</p>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="plan-comparison-container">
+          <div class="header-plan-comparison-container">
+            <h1 class="cpmparison-containt">
+              PLAN <span class="comparison-containt">COMPARISON</span>
+            </h1>
+          </div>
+        </div>
+        <div class="course-sumury-and-more-section">
+          <p class="course-summury">Course Summary</p>
+        </div>
+        <div class="besic-plan-container">
+          <h1 class="besic-plan-containt">
+            Basic Plan <span class="besic-amount">Rs.299/-</span>
+          </h1>
+        </div>
+        <div class="write-notes-section">
+          <div class="write-nots-box-container">
+            <p class="write-nots-text-containt">
+              Written Notes Exercise Worksheet
+            </p>
+          </div>
+        </div>
+        <div class="besic-plan-container">
+          <h1 class="besic-plan-containt">
+            Basic Plan <span class="besic-amount">Rs.299/-</span>
+          </h1>
+        </div>
+        <div class="write-notes-section">
+          <div class="write-nots-box-container">
+            <p class="write-nots-text-containt">
+              Written Notes Exercise Worksheet
+            </p>
+          </div>
+        </div>
+        <div class="besic-plan-container">
+          <h1 class="besic-plan-containt">
+            Basic Plan <span class="besic-amount">Rs.299/-</span>
+          </h1>
+        </div>
+        <div class="write-notes-section">
+          <div class="write-nots-box-container">
+            <p class="write-nots-text-containt">
+              Written Notes Exercise Worksheet
+            </p>
           </div>
         </div>
       </div>
