--- a/index.html
+++ b/index.html
@@ -305,85 +305,87 @@
           </div>
         </div>
       </div>
-      <div class="main-about-details-container">
-        <div class="about-header-container">
-          <h1 class="heres-what-containt">
-            HERE'S WHAT OUR STUDENTS ARE
-            <span class="saying-containt">SAYING</span>
-          </h1>
-        </div>
-        <div class="main-ad-about-box-container">
-          <div class="main-about-container-add">
-            <div class="add-about-box">
-              <p class="about-ad-paragraph">
-                Frankly there was nothing which you told which I didn't know.
-                But the magic was how you gave perspective to everything. It was
-                amazing.
-              </p>
-              <div class="about-ad-paragraph2">
-                <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+      <div class="main-wrapper-about-container">
+        <div class="main-about-details-container">
+          <div class="about-header-container">
+            <h1 class="heres-what-containt">
+              HERE'S WHAT OUR STUDENTS ARE
+              <span class="saying-containt">SAYING</span>
+            </h1>
+          </div>
+          <div class="main-ad-about-box-container">
+            <div class="main-about-container-add">
+              <div class="add-about-box">
+                <p class="about-ad-paragraph">
+                  Frankly there was nothing which you told which I didn't know.
+                  But the magic was how you gave perspective to everything. It
+                  was amazing.
+                </p>
+                <div class="about-ad-paragraph2">
+                  <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+                </div>
+              </div>
+            </div>
+            <div class="main-about-container-add">
+              <div class="add-about-box">
+                <p class="about-ad-paragraph">
+                  Frankly there was nothing which you told which I didn't know.
+                  But the magic was how you gave perspective to everything. It
+                  was amazing.
+                </p>
+                <div class="about-ad-paragraph2">
+                  <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+                </div>
+              </div>
+            </div>
+            <div class="main-about-container-add">
+              <div class="add-about-box">
+                <p class="about-ad-paragraph">
+                  Frankly there was nothing which you told which I didn't know.
+                  But the magic was how you gave perspective to everything. It
+                  was amazing.
+                </p>
+                <div class="about-ad-paragraph2">
+                  <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="main-about-container-add">
-            <div class="add-about-box">
-              <p class="about-ad-paragraph">
-                Frankly there was nothing which you told which I didn't know.
-                But the magic was how you gave perspective to everything. It was
-                amazing.
-              </p>
-              <div class="about-ad-paragraph2">
-                <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+          <div class="main-ad-about-box-container">
+            <div class="main-about-container-add">
+              <div class="add-about-box">
+                <p class="about-ad-paragraph">
+                  Frankly there was nothing which you told which I didn't know.
+                  But the magic was how you gave perspective to everything. It
+                  was amazing.
+                </p>
+                <div class="about-ad-paragraph2">
+                  <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="main-about-container-add">
-            <div class="add-about-box">
-              <p class="about-ad-paragraph">
-                Frankly there was nothing which you told which I didn't know.
-                But the magic was how you gave perspective to everything. It was
-                amazing.
-              </p>
-              <div class="about-ad-paragraph2">
-                <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+            <div class="main-about-container-add">
+              <div class="add-about-box">
+                <p class="about-ad-paragraph">
+                  Frankly there was nothing which you told which I didn't know.
+                  But the magic was how you gave perspective to everything. It
+                  was amazing.
+                </p>
+                <div class="about-ad-paragraph2">
+                  <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="main-ad-about-box-container">
-          <div class="main-about-container-add">
-            <div class="add-about-box">
-              <p class="about-ad-paragraph">
-                Frankly there was nothing which you told which I didn't know.
-                But the magic was how you gave perspective to everything. It was
-                amazing.
-              </p>
-              <div class="about-ad-paragraph2">
-                <p class="dr-abhisek">Dr. Abhishek Gupta</p>
-              </div>
-            </div>
-          </div>
-          <div class="main-about-container-add">
-            <div class="add-about-box">
-              <p class="about-ad-paragraph">
-                Frankly there was nothing which you told which I didn't know.
-                But the magic was how you gave perspective to everything. It was
-                amazing.
-              </p>
-              <div class="about-ad-paragraph2">
-                <p class="dr-abhisek">Dr. Abhishek Gupta</p>
-              </div>
-            </div>
-          </div>
-          <div class="main-about-container-add">
-            <div class="add-about-box">
-              <p class="about-ad-paragraph">
-                Frankly there was nothing which you told which I didn't know.
-                But the magic was how you gave perspective to everything. It was
-                amazing.
-              </p>
-              <div class="about-ad-paragraph2">
-                <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+            <div class="main-about-container-add">
+              <div class="add-about-box">
+                <p class="about-ad-paragraph">
+                  Frankly there was nothing which you told which I didn't know.
+                  But the magic was how you gave perspective to everything. It
+                  was amazing.
+                </p>
+                <div class="about-ad-paragraph2">
+                  <p class="dr-abhisek">Dr. Abhishek Gupta</p>
+                </div>
               </div>
             </div>
           </div>
