--- a/index.html
+++ b/index.html
@@ -478,14 +478,18 @@
             </div>
           </div>
         </div>
+        <div class="plan-comparison-container-wrapper">
         <div class="plan-comparison-container">
           <div class="header-plan-comparison-container">
             <h1 class="cpmparison-containt">
               PLAN <span class="comparison-containt">COMPARISON</span>
             </h1>
+            <div class="common-header-line"></div>
           </div>
+          <img src="./web-img.png/new card img.png">
         </div>
-        <div class="course-sumury-and-more-section">
+      </div>
+        <!-- <div class="course-sumury-and-more-section">
           <p class="course-summury">Course Summary</p>
         </div>
         <div class="besic-plan-container">
@@ -523,8 +527,34 @@
               Written Notes Exercise Worksheet
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
+  <script>
+    const obj={
+      name:"sourav",
+      title:"kundu",
+      student:"rajesh"
+    }
+
+    // alert(obj.name);
+    console.log("my outout", obj.name)
+
+
+  let a=6;
+  let b=9;
+
+  const Rajesh= a+b;
+  // alert(Rajesh);
+
+
+  const sum =(a,b)=>{
+      return a+b;
+  }
+
+  const lol= sum(5,9);
+  alert(lol);
+
+  </script>
 </html>
