--- a/index.html
+++ b/index.html
@@ -479,16 +479,16 @@
           </div>
         </div>
         <div class="plan-comparison-container-wrapper">
-        <div class="plan-comparison-container">
-          <div class="header-plan-comparison-container">
-            <h1 class="cpmparison-containt">
-              PLAN <span class="comparison-containt">COMPARISON</span>
-            </h1>
-            <div class="common-header-line"></div>
+          <div class="plan-comparison-container">
+            <div class="header-plan-comparison-container">
+              <h1 class="cpmparison-containt">
+                PLAN <span class="comparison-containt">COMPARISON</span>
+              </h1>
+              <div class="common-header-line"></div>
+            </div>
+            <img src="./web-img.png/new card img.png" />
           </div>
-          <img src="./web-img.png/new card img.png">
         </div>
-      </div>
         <!-- <div class="course-sumury-and-more-section">
           <p class="course-summury">Course Summary</p>
         </div>
@@ -528,10 +528,78 @@
             </p>
           </div>
         </div> -->
+        <div class="main-buttom-section1">
+          <div class="buttom-header-text-container">
+            <h1 class="buttom-header-text-containt">
+              FREQUENTLY ASKED <span class="buttom-header-qn-text-containt">QUESTIONS</span>
+            </h1>
+          </div>
+          <div class="main-wrapper-buttom-section">
+          <div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+                How long will it take to get access to the course?
+              </p>
+            </div>
+          </div>
+           <div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+                When will the live sessions be held?
+              </p>
+            </div>
+          </div>
+          <div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+                Will the recording of the live session be available with lifetime access?
+              </p>
+            </div>
+          </div>
+          <div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+              What is the time commitment required for the course?
+              </p>
+            </div>
+          </div><div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+                Is the course in Hindi or in English?
+              </p>
+            </div>
+          </div>
+          <div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+                Does the course come with a certificate of completion?
+              </p>
+            </div>
+          </div>
+          <div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+                Is there a group that I can join after purchasing the course?
+              </p>
+            </div>
+          </div><div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+               Can I cancel my course purchase if I don’t like it? Will I get a refund?
+              </p>
+            </div>
+          </div><div class="main-buttom-list-container">
+            <div class="buttom-list-containt">
+              <p class="all-list-text">
+                How can I contact you in case of any issues or concerns?
+              </p>
+            </div>
+          </div>
+        </div>
+        </div>
       </div>
-    </div>
   </body>
-  <script>
+  <!-- <script>
     const obj={
       name:"sourav",
       title:"kundu",
@@ -556,5 +624,5 @@
   const lol= sum(5,9);
   alert(lol);
 
-  </script>
+  </script> -->
 </html>
